2007-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* attachment-reminder.c: (check_for_attachment_clues),
	(clue_check_isempty): Don't mix code and declarations. Also
	remove a c++ comment.

2007-09-06  B S Srinidhi  <srinidhi.bs@gmail.com>

	** Fix for bug #468366

	* attachment-reminder.c: Avoid empty keywords getting added and
	other small fixes and improvements.

2007-08-21  Andre Klapper  <a9016009@gmx.de>

	* org-gnome-attachment-reminder.error.xml:  Marked strings for
	translation

2007-08-20  Johnny Jacob  <jjohnny@novell.com>	

	** Fix for 468159 from Gilles Dartiguelongue
	<gdartigu@svn.gnome.org>
	
	* apps-evolution-attachment-reminder.schemas.in.in : Renamed to
	apps-evolution-attachment-reminder.schemas.in

	* Makefile.am : Removed usage of BASE_VERSION
	
2007-08-03  Johnny Jacob  <jjohnny@novell.com>

	* org-gnome-attachment-reminder.errors.xml: Renamed to
	org-gnome-attachment-reminder.error.xml
	
	* org-gnome-attachment-reminder.error.xml:  Marked strings for
	translation
	
	* Makefile.am : Fixed translation rules.
	
2007-08-03  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #460821

	* attachment-reminder.c: (strip_text_msg): The second argument of
	g_utf8_strdown() expects the length of string in bytes or -1.

2007-07-30  Andre Klapper  <a9016009@gmx.de>

	* attachment-reminder.glade:
	remove "window1" string from translation

2007-07-26  Sankar P  <psankar@novell.com>

	* attachment-reminder.c: (e_plugin_lib_configure),
	(org_gnome_attachment_reminder_config_option):
	* attachment-reminder.glade:
	Configure attachment-reminder plugin within the plugin-manager.

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* attachment-reminder.c: Plugged memory leak and the second argument
	of g_utf8_strdown() should be in bytes.

2007-07-17  Sankar P  <psankar@novell.com>

	* org-gnome-attachment-reminder.errors.xml:
	Changed the string "Cancel" to "Continue Editing"

2007-07-10  Sankar P  <psankar@novell.com>
